ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/Repayments__c.object-meta.xml
<CustomObject>
    <label>Repayment</label>
    <nameField>
        <label>Repayments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Repayments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>