ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/ACH_Form_filled_correctly__c.field-meta.xml
<CustomField>
    <fullName>ACH_Form_filled_correctly__c</fullName>
    <label>ACH Form filled correctly?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>