ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/ACH_Form_Remarks__c.field-meta.xml
<CustomField>
    <fullName>ACH_Form_Remarks__c</fullName>
    <label>ACH Form Remarks</label>
    <type>TextArea</type>
</CustomField>