ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/ACH_Mandate_Remarks__c.field-meta.xml
<CustomField>
    <fullName>ACH_Mandate_Remarks__c</fullName>
    <label>ACH Mandate Remarks</label>
    <type>TextArea</type>
</CustomField>