ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/Authorization_mode_available__c.field-meta.xml
<CustomField>
    <fullName>Authorization_mode_available__c</fullName>
    <label>Authorization mode available</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NetBanking</fullName>
            </value>
            <value>
                <fullName>Debit Card</fullName>
            </value>
            <value>
                <fullName>N</fullName>
                <isActive>false</isActive>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <isActive>false</isActive>
                <label>Y</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>