ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/Auto_Pay_Limit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Auto_Pay_Limit_Amount__c</fullName>
    <formula>Value($Label.Auto_Pay_Limit_Number)  *EMI_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto Pay Limit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>