ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/Bank_A_c_holder_has_signed_the_ACH_Manda__c.field-meta.xml
<CustomField>
    <fullName>Bank_A_c_holder_has_signed_the_ACH_Manda__c</fullName>
    <description>Bank A/c holder has signed the ACH Mandate (as in bank records)</description>
    <label>Bank A/c holder has signed the ACH Manda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>