ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/Bank_Account_No_is_correct_and_complete__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_No_is_correct_and_complete__c</fullName>
    <label>Bank Account No is correct and complete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>