ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/Bank_Master__c.field-meta.xml
<CustomField>
    <fullName>Bank_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Master</label>
    <referenceTo>Bank_Masters__c</referenceTo>
    <relationshipLabel>Repayments</relationshipLabel>
    <relationshipName>Repayments</relationshipName>
    <type>Lookup</type>
</CustomField>