ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/Cancelled_Cheque_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Cheque_Remarks__c</fullName>
    <label>Cancelled Cheque Remarks</label>
    <type>TextArea</type>
</CustomField>