ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/CFD_9_digit_loan_no_is_filled_correctly__c.field-meta.xml
<CustomField>
    <fullName>CFD_9_digit_loan_no_is_filled_correctly__c</fullName>
    <label>CFD 9 digit loan no is filled correctly</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>