ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/Confirm_that_all_Mandate_details_are_cor__c.field-meta.xml
<CustomField>
    <fullName>Confirm_that_all_Mandate_details_are_cor__c</fullName>
    <description>Confirm that all Mandate details are correctly entered and I have personally checked all data</description>
    <label>Confirm that all Mandate details are cor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>