ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/Copy_of_bank_P_B_and_or_specimen_cheque__c.field-meta.xml
<CustomField>
    <fullName>Copy_of_bank_P_B_and_or_specimen_cheque__c</fullName>
    <description>Copy of bank P/B and/or specimen cheque is collected, checked for ACH Mandate details</description>
    <label>Copy of bank P/B and/or specimen cheque</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>