ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/Correct_bank_name_is_filled__c.field-meta.xml
<CustomField>
    <fullName>Correct_bank_name_is_filled__c</fullName>
    <label>Correct bank name is filled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>