ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/Correct_deal_date_or_PACT_PR_date_is_fil__c.field-meta.xml
<CustomField>
    <fullName>Correct_deal_date_or_PACT_PR_date_is_fil__c</fullName>
    <description>Correct deal date or PACT PR date is filled in Period From Date</description>
    <label>Correct deal date or PACT PR date is fil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>