ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/Correct_EMI_frequency_is_ticked__c.field-meta.xml
<CustomField>
    <fullName>Correct_EMI_frequency_is_ticked__c</fullName>
    <label>Correct EMI frequency is ticked</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>