ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/Correct_Last_EMl_date_2_months_is_fill__c.field-meta.xml
<CustomField>
    <fullName>Correct_Last_EMl_date_2_months_is_fill__c</fullName>
    <description>Correct Last EMl date + 2 months is filled in as Period To Date</description>
    <label>Correct Last EMl date + 2 months is fill</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>