ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/Correct_mobile_or_landline_no_is_filled__c.field-meta.xml
<CustomField>
    <fullName>Correct_mobile_or_landline_no_is_filled__c</fullName>
    <label>Correct mobile or landline no is fille</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>