ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>