ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/Customer_code_in_Reference_Il__c.field-meta.xml
<CustomField>
    <fullName>Customer_code_in_Reference_Il__c</fullName>
    <label>Customer code in Reference Il</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>