ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/Deal_Number__c.field-meta.xml
<CustomField>
    <fullName>Deal_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Number</label>
    <referenceTo>Deal_Number__c</referenceTo>
    <relationshipLabel>Repayments</relationshipLabel>
    <relationshipName>Repayments</relationshipName>
    <type>Lookup</type>
</CustomField>