ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/Debit_optn_type_to_be_ticked_as_Max_Amnt__c.field-meta.xml
<CustomField>
    <fullName>Debit_optn_type_to_be_ticked_as_Max_Amnt__c</fullName>
    <description>Debit option type to be ticked as Maximum Amount</description>
    <label>Debit optn type to be ticked as Max Amnt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>