ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/E_NACH_API_Status__c.field-meta.xml
<CustomField>
    <fullName>E_NACH_API_Status__c</fullName>
    <label>E-NACH API Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>