ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/E_Nach_Session__c.field-meta.xml
<CustomField>
    <fullName>E_Nach_Session__c</fullName>
    <label>E-NACH Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>