ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/EMl_Amt_Is_filled_correctly__c.field-meta.xml
<CustomField>
    <fullName>EMl_Amt_Is_filled_correctly__c</fullName>
    <label>EMl Amt 1.5x Is filled correctly</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>