ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/Fill_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Fill_Email_ID__c</fullName>
    <label>Fill Email ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>