ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>As Presented</fullName>
                <default>true</default>
                <label>As Presented</label>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>bi-monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Half yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>