ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/Initiate_E_NACH_Btn_Click_Date_And_Time__c.field-meta.xml
<CustomField>
    <fullName>Initiate_E_NACH_Btn_Click_Date_And_Time__c</fullName>
    <description>This field will store the date and time when the user clicked on &apos;Initiate E-NACH&apos; button on &apos;Repayment Mandate&apos; section on &apos;Post Sanction Checks and Documentation&apos; stage</description>
    <label>Initiate E-NACH Btn Click Date And Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>