ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/Initiation_Method__c.field-meta.xml
<CustomField>
    <fullName>Initiation_Method__c</fullName>
    <label>Initiation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI Online</fullName>
            </value>
            <value>
                <fullName>SI Offline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>