ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/Is_debit_card_available_with_customer__c.field-meta.xml
<CustomField>
    <fullName>Is_debit_card_available_with_customer__c</fullName>
    <label>Is debit card available with customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>