ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/Is_SI_form_Legible__c.field-meta.xml
<CustomField>
    <fullName>Is_SI_form_Legible__c</fullName>
    <label>Is SI form Legible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>