ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/Leftside_Create_Modify_ticked__c.field-meta.xml
<CustomField>
    <fullName>Leftside_Create_Modify_ticked__c</fullName>
    <label>Leftside Create/Modify ticked</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>