ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount__c</fullName>
    <label>Loan Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>