ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/lst_EMI_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>lst_EMI_Due_Date__c</fullName>
    <label>1st EMI Due Date</label>
    <type>Date</type>
</CustomField>