ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/Name_Match_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Name_Match_Percentage__c</fullName>
    <label>Name Match Percentage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>