ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/Name_of_A_c_holder_is_filled_in_CAPITAL__c.field-meta.xml
<CustomField>
    <fullName>Name_of_A_c_holder_is_filled_in_CAPITAL__c</fullName>
    <description>Name of the A/c holder [as in passbook/as printed in specimen cheque) is filled in CAPITAL LETTERS</description>
    <label>Name of A/c holder is filled in CAPITAL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>