ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/Name_of_the_A_c_holder__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_A_c_holder__c</fullName>
    <label>Name of the A/c holder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>