ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/Repayment_Method__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Method__c</fullName>
    <label>Repayment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <label>e-NACH</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>ACH</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>SI</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>IES</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>