ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/Repayment_Method_Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Method_Retry_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Repayment Method Retry Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>