ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/Repayment_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Remarks__c</fullName>
    <label>Repayment Remarks</label>
    <type>TextArea</type>
</CustomField>