ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/Repayment_to_be_done_by__c.field-meta.xml
<CustomField>
    <fullName>Repayment_to_be_done_by__c</fullName>
    <label>Repayment to be done by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>