ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/Repayments_Captured_Correctly__c.field-meta.xml
<CustomField>
    <fullName>Repayments_Captured_Correctly__c</fullName>
    <label>Repayments Captured Correctly ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>