ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/SB_Or_CAis_ticked_appropriately__c.field-meta.xml
<CustomField>
    <fullName>SB_Or_CAis_ticked_appropriately__c</fullName>
    <label>SB Or CA is ticked appropriately</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>