ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/SI_Details_Unavailable_At_Present__c.field-meta.xml
<CustomField>
    <fullName>SI_Details_Unavailable_At_Present__c</fullName>
    <label>SI Details Unavailable At Present ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>