ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/SI_Form_Legibility_Remarks__c.field-meta.xml
<CustomField>
    <fullName>SI_Form_Legibility_Remarks__c</fullName>
    <label>SI Form Legibility Remarks</label>
    <type>TextArea</type>
</CustomField>