ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/SI_Post_Sanction_Remarks__c.field-meta.xml
<CustomField>
    <fullName>SI_Post_Sanction_Remarks__c</fullName>
    <label>SI Post-Sanction Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>