ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/SI_Repayment_Captured_correctly__c.field-meta.xml
<CustomField>
    <fullName>SI_Repayment_Captured_correctly__c</fullName>
    <label>SI Repayment Captured correctly</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>