ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/SI_Repayment_CVO_Remarks__c.field-meta.xml
<CustomField>
    <fullName>SI_Repayment_CVO_Remarks__c</fullName>
    <label>SI Repayment CVO Remarks</label>
    <type>TextArea</type>
</CustomField>