ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/SI_Status__c.field-meta.xml
<CustomField>
    <fullName>SI_Status__c</fullName>
    <label>SI Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>