ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <label>URL</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>