ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/recordTypes/ACH.recordType-meta.xml
<RecordType>
    <fullName>ACH</fullName>
    <active>true</active>
    <label>ACH</label>
</RecordType>