ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/recordTypes/E_NACH.recordType-meta.xml
<RecordType>
    <fullName>E_NACH</fullName>
    <active>true</active>
    <label>E-NACH</label>
</RecordType>