ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/recordTypes/SI_Offline.recordType-meta.xml
<RecordType>
    <fullName>SI_Offline</fullName>
    <active>true</active>
    <label>SI Offline</label>
</RecordType>