ProdIND/ProdPrograms/force-app/main/default/objects/Repayments__c/recordTypes/SI_Online.recordType-meta.xml
<RecordType>
    <fullName>SI_Online</fullName>
    <active>true</active>
    <label>SI Online</label>
</RecordType>